--- a/pages/sections/act-list/act-list.wxml
+++ b/pages/sections/act-list/act-list.wxml
@@ -1,2 +1,31 @@
 <!--pages/sections/act-list/act-list.wxml-->
 
+<!--组织名称-->
+<view class="org-header">
+    <text class="text">{{orgName}}组织</text>
+</view>
+
+<!--信息、管理员、活动-->
+<view class='folder'>
+  <view class='folder_item'>
+    <view class='title' data-index='1' catchtap='panel'>
+      <view class='title_1'>信息</view>
+      <view class='title_2'><image src="/icon/{{showIndex == 1 ? 'up':'down'}}.png"></image></view>
+    </view>
+    <view class='detail' wx:if="{{showIndex == 1}}">没有信息</view>
+  </view>
+  <view class='folder_item'>
+    <view class='title' data-index='2' catchtap='panel'>
+      <view class='title_1'>管理员</view>
+      <view class='title_2'><image src="/icon/{{showIndex == 2 ? 'up':'down'}}.png"></image></view>
+    </view>
+    <view class='detail' wx:if="{{showIndex == 2}}">管理员跑路了</view>
+  </view>
+  <view class='folder_item'>
+    <view class='title' data-index='3' catchtap='panel'>
+      <view class='title_1'>活动</view>
+      <view class='title_2'><image src="/icon/{{showIndex == 3 ? 'up':'down'}}.png"></image></view>
+    </view>
+    <view class='detail' wx:if="{{showIndex == 3}}">活动都是假的</view>
+  </view>
+</view>
