add login in 5 pages (really took me a long time)

--- a/app.wxss
+++ b/app.wxss
@@ -9,3 +9,6 @@
   box-sizing: border-box;
 } 
 
+.hover-login {
+  position:fixed;top:0;bottom:0;right:0;left:0;background:transparent;display:flex;align-items:flex-end;align-content:center;
+}
