--- a/pages/my/my-account/my-account.wxml
+++ b/pages/my/my-account/my-account.wxml
@@ -1,5 +1,7 @@
 <!--pages/my/my-account/my-account.wxml-->
 
+<view>我的用户id:{{userId}}</view>
+
 <view>我的认证邮箱</view>
 <text>\n</text>
 <view wx:if="{{verifiedEmail != ''}}">已认证：{{verifiedEmail}}</view>
