fix bug in request; add all get api

--- a/pages/index/recommend/recommend.wxml
+++ b/pages/index/recommend/recommend.wxml
@@ -13,9 +13,13 @@
 </view> -->
 
 
-<!-- <view wx:else> -->
+<view wx:if="{{!havelogin}}">未登录，点页面任何位置触发登录按钮</view>
+<view wx:else>
 	<!--用于debug-->>
-	<view>已成功登陆</view>
-	<view>{{info}}</view>
-<!-- </view> -->
+	<view>已成功登录</view>
+	<view style='word-break:break-all;'>{{info}}</view>
+</view>
 
+<text>\n</text>
+
+<view bind:tap="debugFunc">【这是一个debug用的区域，可以设置tap响应事件】</view>
