--- a/pages/sections/act-list/act-list.wxss
+++ b/pages/sections/act-list/act-list.wxss
@@ -13,7 +13,7 @@
   width: 90rpx;
 }
 
-.org-header .btn{
+.org-header .followBtn{
   width: 120rpx;
   height: 60rpx;
   background-color: rgba(19, 173, 245, 0.548);
@@ -28,10 +28,6 @@
   margin-right: 0%;
 }
 
-.org-header .btn1::after {
-  border-radius: 49rpx;
-  border: 0;
-}
 
 .folder {
   width: 700rpx;
@@ -64,7 +60,22 @@
 }
 .folder .folder_item .detail {
   margin: 10rpx auto;
-  font-size: 25rpx;
-  line-height: 40rpx;
+  font-size: 30rpx;
+  line-height: 50rpx;
   text-indent: 2em;
+}
+
+.folder .folder_item .editBtn{
+  width: 100rpx;
+  height: 50rpx;
+  background-color: rgba(200, 212, 218, 0.548);
+  color: rgb(43, 37, 37);
+  border-radius: 49rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 25rpx;
+  writing-mode: vertical-lr;
+  margin-right: 0%;
 }
