--- a/pages/follows/follows-home/follows-home.wxml
+++ b/pages/follows/follows-home/follows-home.wxml
@@ -1,8 +1,6 @@
 <!--pages/follows/follows-home/follows-home.wxml-->
 
-</view>
 <view wx:if="{{!havelogin}}" class="hover-login" capture-catch:tap="callLogin"></view>
-<text>pages/follows/follows-home/follows-home.wxml</text>
 
 
 <!--follow-orgs-->
@@ -19,7 +17,7 @@
       <image class="org-avator" src="{{item.avatorUrl}}"></image>
       <text class="org-name">{{item.name}}</text>
     </view>
-</view>
+  </view>
 </view>
 
 <!--message lists-->
@@ -31,10 +29,12 @@
           <view class="content">
             <text class="header">{{item.org_name}}</text>
             <text class="publish_time">{{item.publish_time}}</text>
-            <text calss="title">{{item.act_title}}</text>
-            <text class="org_time">活动时间： {{item.act_time !== null ? item.act_time : "暂无信息"}}</text>
-            <text class="place">活动地点：{{item.act_place !== null ? item.act_place : "暂无信息"}}</text>
-            <text class="body">{{item.body}}</text>
+            <view class="content-body">
+              <text calss="title">{{item.act_title}}</text>
+              <text class="org_time">活动时间： {{item.act_time !== null ? item.act_time : "暂无信息"}}</text>
+              <text class="place">活动地点：{{item.act_place !== null ? item.act_place : "暂无信息"}}</text>
+              <text class="body">{{item.body}}</text>
+            </view>
             <view class="bottom-right" bindtap="toActivity">
               <image class="arrow" src="/icon/rightArrow.png"></image>
               <text class="txt">详情</text>
@@ -49,5 +49,6 @@
         <!--TO DO-->
       </view>
     </view>
-      
+    
   </scroll-view>
+</view>
