--- a/pages/follows/follows-home/follows-home.wxss
+++ b/pages/follows/follows-home/follows-home.wxss
@@ -77,7 +77,7 @@
 }
 
 .msg-item .activity {
-
+  background: #aaa;
 }
 
 
@@ -96,6 +96,10 @@
   flex-direction: column;
   padding-top: 45rpx;
   margin-left: 130rpx;
+}
+
+.msg-item .content .content-body {
+
 }
 
 .msg-item .header {
@@ -136,6 +140,7 @@
 }
 
 .msg-item .bottom-right {
+  margin-top: 20rpx;
   display: flex;
   justify-content: flex-end;
   align-items: center;
