adjust style of page 4

--- a/pages/follows/follows-home/follows-home.wxss
+++ b/pages/follows/follows-home/follows-home.wxss
@@ -77,7 +77,6 @@
 }
 
 .msg-item .activity {
-  background: #aaa;
 }
 
 
@@ -99,7 +98,9 @@
 }
 
 .msg-item .content .content-body {
-
+  border-style:solid;
+  border-width:2rpx;
+  border-color: #666;
 }
 
 .msg-item .header {
