--- a/pages/my/my-home/my-home.wxml
+++ b/pages/my/my-home/my-home.wxml
@@ -22,8 +22,8 @@
   </view>
 </view>
 
-<button bind:tap="toMyAccount" class="accountBtn">我的账户</button>
-<button bind:tap="toMyOrg" class="orgBtn">我管理的组织</button>
-<button bind:tap="toMyAct" class="actBtn">我管理的活动</button>
-<button bind:tap="toNewAct" class="pubBtn">活动发布</button>
-<button bind:tap="toFeedback" class="fdbBtn">提交反馈</button>
+<button bind:tap="toMyAccount" class="Btn accountBtn">我的账户</button>
+<button bind:tap="toMyOrg" class="Btn orgBtn">我管理的组织</button>
+<button bind:tap="toMyAct" class="Btn actBtn">我管理的活动</button>
+<button bind:tap="toNewAct" class="Btn pubBtn">活动发布</button>
+<button bind:tap="toFeedback" class="Btn fdbBtn">提交反馈</button>
