--- a/pages/my/my-home/my-home.wxss
+++ b/pages/my/my-home/my-home.wxss
@@ -18,10 +18,9 @@
     margin-top: 200px;
   }
 
-  .accountBtn {
+  .Btn {
     width: 80rpx;
     height: 80rpx;
-    background-color: rgba(19, 245, 94, 0.548);
     color: white;
     border-radius: 49rpx;
     display: flex;
@@ -31,69 +30,31 @@
     font-size: 40rpx;
     writing-mode: vertical-lr;
     margin-right: 0%;
+
+    background-color: rgba(19, 125, 245, 0.548);
+  }
+
+  .accountBtn {
+    /* background-color: rgba(19, 245, 94, 0.548); */
     top: -600rpx;
   }
   
   .orgBtn {
-    width: 80rpx;
-    height: 80rpx;
-    background-color: rgba(19, 245, 215, 0.548);
-    color: white;
-    border-radius: 49rpx;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    font-size: 40rpx;
-    writing-mode: vertical-lr;
-    margin-right: 0%;
-    top: -560rpx;
+    /* background-color: rgba(19, 245, 215, 0.548); */
+    top: -580rpx;
   }
   
   .actBtn {
-    width: 80rpx;
-    height: 80rpx;
-    background-color: rgba(19, 125, 245, 0.548);
-    color: white;
-    border-radius: 49rpx;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    font-size: 40rpx;
-    writing-mode: vertical-lr;
-    margin-right: 0%;
-    top: -520rpx;
+    /* background-color: rgba(19, 125, 245, 0.548); */
+    top: -560rpx;
   }
   
   .pubBtn {
-    width: 80rpx;
-    height: 80rpx;
-    background-color: rgba(19, 61, 245, 0.548);
-    color: white;
-    border-radius: 49rpx;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    font-size: 40rpx;
-    writing-mode: vertical-lr;
-    margin-right: 0%;
-    top: -480rpx;
+    /* background-color: rgba(19, 61, 245, 0.548); */
+    top: -540rpx;
   }
   
   .fdbBtn {
-    width: 80rpx;
-    height: 80rpx;
-    background-color: rgba(245, 19, 189, 0.548);
-    color: white;
-    border-radius: 49rpx;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    font-size: 40rpx;
-    writing-mode: vertical-lr;
-    margin-right: 0%;
-    top: -440rpx;
+    /* background-color: rgba(245, 19, 189, 0.548); */
+    top: -520rpx;
   }
