--- a/pages/sections/act-list/act-list.wxml
+++ b/pages/sections/act-list/act-list.wxml
@@ -2,23 +2,32 @@
 
 <!--组织名称-->
 <view class="org-header">
-    <text class="text">{{orgName}}组织</text>
+    <text class="text">{{orgName}}</text>
     <image class="picture" src="{{orgPicUrl}}"></image>
-    <button class='followBtn' bindtap='followOrg'>关注</button>
+    <block wx:if="{{isRealOrg && !hasFollowed}}">
+      <button class='followBtn' bindtap='followOrg'>关注</button>
+    </block>
+    <block wx:elif="{{isRealOrg && hasFollowed}}">
+      <button class='followBtn' bindtap='unFollowOrg'>取消关注</button>
+    </block>
 </view>
 
 <!--信息、管理员、活动-->
 <view class='folder'>
+
+  <block wx:if="{{isRealOrg}}">
   <view class='folder_item'>
     <view class='title' data-index='1' catchtap='panel'>
       <view class='title_1'>信息</view>
       <view class='title_2'><image src="/icon/{{showIndex == 1 ? 'up':'down'}}.png"></image></view>
     </view>
-    <view class='detail' wx:if="{{showIndex == 1}}">没有信息</view>
-    <view class='detail' wx:if="{{showIndex == 1}}">创建时间{{orgInfo}}</view>
-    <view class='detail' wx:if="{{showIndex == 1}}">介绍{{orgInfo}}</view>
+    <view class='detail' wx:if="{{showIndex == 1}}">创建时间：{{orgInfo.create_time}}</view>
+    <view class='detail' wx:if="{{showIndex == 1}}">介绍：{{orgInfo.description}}</view>
     <button class='editBtn' bindtap='editOrgInfo' wx:if="{{showIndex == 1}}">编辑</button>
   </view>
+  </block>
+
+  <block wx:if="{{isRealOrg}}">
   <view class='folder_item'>
     <view class='title' data-index='2' catchtap='panel'>
       <view class='title_1'>管理员</view>
@@ -27,6 +36,8 @@
     <view class='detail' wx:if="{{showIndex == 2}}">管理员跑路了</view>
     <button class='editBtn' bindtap='editMemList' wx:if="{{showIndex == 2}}">编辑</button>
   </view>
+  </block>
+
   <view class='folder_item'>
     <view class='title' data-index='3' catchtap='panel'>
       <view class='title_1'>活动</view>
@@ -35,7 +46,7 @@
     <view class='detail' wx:if="{{showIndex == 3}}">活动都是假的</view>
     <view class="list" wx:if="{{showIndex == 3}}">
       <button class='editBtn' bindtap='editActInfo' wx:if="{{showIndex == 3}}">编辑</button>
-
     </view>
   </view>
+
 </view>
