--- a/pages/my/my-org/my-org.wxss
+++ b/pages/my/my-org/my-org.wxss
@@ -1,1 +1,78 @@
 /* pages/my/my-org/my-org.wxss */
+
+.forum-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90rpx;
+  padding: 0 30rpx;
+}
+
+.btn{
+  width: 100rpx;
+  height: 150rpx;
+  margin-top: 20rpx;
+  margin-bottom: 20rpx;
+  background-color: white;
+  color: #999999;
+  border-radius: 0rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 30rpx;
+}
+
+.btnImg {
+  width: 50rpx;
+  height: 50rpx;
+}
+
+.shadow {
+  transition: ease-out 200ms;
+  box-shadow: 0 0 18rpx rgb(236, 236, 236);
+}
+
+.arrow {
+  width: 20rpx;
+  height: 20rpx;
+  border-top: 4rpx solid #999;
+  border-right: 4rpx solid #999;
+  transform: rotate(45deg);
+  margin: 0 12rpx 0 auto;
+}
+
+.one-line {
+  align-items: center;
+}
+
+.title {
+  font-size: 34rpx;
+}
+
+.card {
+  padding: 0;
+}
+
+.order {
+  font-weight: 600;
+}
+
+.cell {
+  padding: 24rpx;
+  height: 80rpx;
+  align-items: center;
+  display: flex;
+  background : white;
+  border-bottom: 1px solid #f0f0f0;
+  /* border-bottom: 1px solid #ffffff; */
+}
+
+.auth-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.auth-content text {
+  margin-bottom: 30rpx;
+}
