--- a/pages/my/new-act/new-act.wxml
+++ b/pages/my/new-act/new-act.wxml
@@ -1,2 +1,14 @@
 <!--pages/my/new-act/new-act.wxml-->
-<text>pages/my/new-act/new-act.wxml</text>
+<picker bindchange="bindPickerChange" value="{{index}}" range="{{type_array}}">
+                <a class="weui-btn weui-btn_default">单列选择器</a>
+    </picker>
+
+
+
+<i-panel title="活动基本信息">
+
+    <i-input value="{{ value1 }}" title="" autofocus placeholder="名字" />
+    <i-input value="{{ value2 }}" type="number" title="联系电话" placeholder="请输入手机号" />
+    <i-input value="{{ value3 }}" type="textarea" title="详细地址" placeholder="请输入详细地址(最多50字)" maxlength="50" />
+    <i-input value="{{ value4 }}" title="用户信息" disabled />
+</i-panel>
