--- a/pages/sections/org-list/org-list.wxml
+++ b/pages/sections/org-list/org-list.wxml
@@ -61,7 +61,7 @@
 </view>
 
 <!--组织列表-->
-<view class="shadow">
+<!-- <view class="shadow">
     <block wx:for="{{forumInfo}}" wx:key="id">
 			<view class="cell" hover-class="hover-grey" hover-stay-time="300" bindtap="goOrg" data-orgid="{{item.id}}" data-orgname="{{item.name}}">
 				<view class="content one-line">
@@ -70,6 +70,15 @@
 				</view>
 			</view>
     </block>
-</view>
+</view> -->
+
+<i-cell-group i-class="org-wrap">
+    <block wx:for="{{forumInfo}}" wx:key="id">
+        <i-cell title="{{item.name}}" label="附加描述" value="详细信息" is-link bindtap="goOrg" 
+        data-orgid="{{item.id}}" data-orgname="{{item.name}}">
+            <image class="org-avator" src="/icon/like.png"  slot="icon"></image>
+        </i-cell> 
+    </block>
+</i-cell-group>
 
 
